# my-archeon-tauri

./: .editorconfig  .gitignore  LICENSE  README.md  adv_tex_result.txt  archeon_3d.py  batch_debug.txt  batch_debug_no_tex.txt  batch_debug_tex.txt  batch_meshops_result.txt  batch_test.py  batch_test_200.txt  batch_test_200_restart.txt  batch_test_200_resume.txt  batch_test_80.txt  batch_test_80_final_v4.txt  batch_test_80_final_v5.txt  batch_test_80_fixed.txt  batch_test_80_fixed_v2.txt  batch_test_80_fixed_v3.txt  debug_loading.py  diagnostic_no_tex.txt  diagnostic_no_tex_retry.txt  high_fid_baking_result.txt  packing_result.txt  pyproject.toml  requirements.txt  security_test_result.txt  test_report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ui-audit.yml
binaries/: README.md  python-backend-x86_64-unknown-linux-gnu
build_scripts/: Archeon3D.desktop  build_linux.sh  build_windows.bat
hy3dgen/: i18n.py  inference.py  manager.py  text2image.py
scripts/: INTERFACES.sh  benchmark.py  blender_addon.py  build_sidecar.py  check_dep_sync.py  check_deps.py  cleanup_governance.py  debug_422.py  diagnose_gradio.py  lint.sh  monitor_logs.py  orchestrator.py  profile_inference.py  reproduce_issue.py  run_app.sh  run_production.py  setup_docker.sh  ui_visual_audit.py  verify_deployment.py
src/: index.html  sidecarClient.js  sidecarClient.ts
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_advanced_tex.py  test_api_contract.py  test_api_stress.py  test_api_v2.py  test_batch_meshops.py  test_high_fid_baking.py  test_meshops.py  test_native_texturing.py  test_packing.py  test_security.py  test_security_adv.py  test_ui_design_system.py  test_ui_smoke.py  test_unit_utils.py
(+146 files in other folders)
