[package]
name = "my-archeon-tauri"
version = "0.1.0"
description = "Archeon Tauri desktop shell"
authors = ["Archeon Team"]
edition = "2021"

[lib]
name = "my_archeon_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
